# androxinev2

./: .env.dev.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: deploy.yml
docker/: Dockerfile
docker/compose/: docker-compose.dev.override.yml  docker-compose.prod.override.yml  docker-compose.test.override.yml  docker-compose.yml
docker/scripts/: dev.sh  prod.sh
src/: config.py  main.py  uow.py
src/admin/: __init__.py  exercise.py  sets.py  templates.py  user.py
src/application/: uow.py
src/application/repositories/: __init__.py  category.py  exercise.py  set.py  user.py  workout_template.py
src/application/services/: jwt.py
src/common/: __init__.py  datetime_utils.py
src/dao/: __init__.py  category.py  exercises.py  sets.py  templates.py  users.py
src/db/: base.py
src/db/migrations/: env.py
src/domain/entities/: __init__.py  excercises.py  exercises.py  sets.py  templates.py  users.py
src/domain/enums/: __init__.py  day_of_week.py
src/dto/auth/: __init__.py  payload.py  telegram_auth.py
src/dto/categories/: __init__.py  create.py  delete.py  get.py  list_categories.py  update.py
src/dto/exercises/: __init__.py  archive_excercise.py  create.py  delete.py  get.py  list.py  restore_excercise.py  update.py
src/dto/sets/: __init__.py  (+9 more)
src/exceptions/: __init__.py  common.py
src/infrastructure/: config.py
src/models/: __init__.py  exercises.py  sets.py  templates.py  users.py
src/services/: jwt.py  telegram_auth.py
(+342 files in other folders)
