[project]
name = "androxinev2"
version = "0.1.0"
description = "Помощник для отслеживания посещений спортзала и прогресса в тренировках."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "fastapi-pagination>=0.15.9",
    "fastapi[standard]>=0.128.4",
    "pyjwt>=2.11.0",
    "python-ulid[pydantic]>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.46",
]

[dependency-groups]
test = [
    "coverage>=7.13.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
